Add speaker notes; rename images

--- a/source/slides/110-point-1-1.md
+++ b/source/slides/110-point-1-1.md
@@ -1,8 +1,15 @@
-$background:/images/Failure-Quotes-10.jpg$
+$background:/images/edison-quote.jpg$
 $class:fit-background$
 
 <h3 class="right" style="margin: -30px 100px">
   A problem you faced
 </h3>
+
+Note:
+What problems or challenges have you faced?
+
+Someone in the audience is probably facing it, too. 
+
+Even if you haven't completely solved the problem, the talk could still be very interesting.
 
 
