--- a/source/slides/120-point-1-2.md
+++ b/source/slides/120-point-1-2.md
@@ -1,5 +1,10 @@
-$background:/images/Fingernails-scratching-a--007.jpg$
+$background:/images/fingernails-on-board.jpg$
 
 ## Something irritating you
+
+Note:
+What is bothering you lately? 
+
+Here's you chance to get it off your chest and prevent someone else from experiencing or causing irritation.
 
 
