--- a/source/slides/130-point-1-3.md
+++ b/source/slides/130-point-1-3.md
@@ -1,7 +1,13 @@
-$background:/images/lottery_ticket01.jpg$
+$background:/images/lottery-ticket.jpg$
 
 <h2 class="right" style="margin-top: 440px;">
-    A chance to improve
+  A chance to improve
 </h2>
 
+Note: 
+What opportunities have you benefited you?
+
+The JavaScript ecosystem is so vast that most likely what you know will be new to others.
+
+Or maybe this is something you were forced to do and it turned out to be better than you expected.
 
