--- a/source/slides/140-point-1-4.md
+++ b/source/slides/140-point-1-4.md
@@ -1,5 +1,10 @@
-$background:/images/MiceLearnFromExperience.jpg$
+$background:/images/mouse-with-helment.jpg$
 
 # Hard-earned knowledge
 
+Note:
+What have you learned either deliberately or through situational experience?
 
+Why did you deliberately seek certain information?
+
+Your audience might have a reason to learn it, too.
