--- a/source/slides/310-point-3-1.md
+++ b/source/slides/310-point-3-1.md
@@ -22,3 +22,12 @@
   <span tagcloud-weight="2">compatibility</span>
   <span tagcloud-weight="5">stability</span>
  </div>
+
+Note:
+In the programming and IT world, these benefits fall into broad categories. 
+
+You can, and probably should, be more specific than this, but you can use these categories to simulate your thinking.
+
+Ask yourself: What benefit will they get with the information I'm providing?
+
+Focusing on one of these benefits will help focus your presentation.
