Fix minor issues and contact slide

--- a/source/slides/140-point-1-4.md
+++ b/source/slides/140-point-1-4.md
@@ -1,6 +1,6 @@
-$background:/images/mouse-with-helment.jpg$
+$background:/images/mouse-with-helmet.jpg$
 
-# Hard-earned knowledge
+## Hard-earned knowledge
 
 Note:
 What have you learned either deliberately or through situational experience?
