--- a/source/slides/130-point-1-3.md
+++ b/source/slides/130-point-1-3.md
@@ -5,7 +5,7 @@ $background:/images/lottery-ticket.jpg$
 </h2>
 
 Note: 
-What opportunities have you benefited you?
+What opportunities have benefited you?
 
 The JavaScript ecosystem is so vast that most likely what you know will be new to others.
 
